--- a/buildSrc/src/main/resources/website/src/app/component/search/search.component.html
+++ b/buildSrc/src/main/resources/website/src/app/component/search/search.component.html
@@ -1,6 +1,6 @@
 <mat-form-field>
 	<mat-label>{{ label }}</mat-label>
-	<input matInput type="search" aria-label="Search" [formControl]="searchBox" [matAutocomplete]="auto"/>
+	<input matInput type="search" aria-label="Search" [formControl]="searchBox" [matAutocomplete]="auto" [value]="selected"/>
 </mat-form-field>
 
 <mat-autocomplete #auto="matAutocomplete">
