--- a/buildSrc/src/main/resources/website/src/app/component/side/side.component.css
+++ b/buildSrc/src/main/resources/website/src/app/component/side/side.component.css
@@ -8,6 +8,8 @@ mat-sidenav-content {
 }
 
 mat-sidenav {
+	--mat-sidenav-container-shape: 0;
+	--mat-sidenav-container-elevation-shadow: 0px 8px 10px -5px rgba(0, 0, 0, .2), 0px 16px 24px 2px rgba(0, 0, 0, .14), 0px 6px 30px 5px rgba(0, 0, 0, .12);
 	width: 24em;
 }
 
