--- a/buildSrc/src/main/resources/website/src/app/component/directions/directions.component.html
+++ b/buildSrc/src/main/resources/website/src/app/component/directions/directions.component.html
@@ -1,7 +1,7 @@
-<div class="column margin">
+<div class="column">
 	@if (isLoading()) {
 		<div class="column center">
-			<mat-spinner/>
+			<mat-spinner class="grayscale"/>
 		</div>
 	}
 	@for (directionsSegment of getDirections(); track $index) {
