--- a/buildSrc/src/main/resources/website/src/app/component/map/map.component.html
+++ b/buildSrc/src/main/resources/website/src/app/component/map/map.component.html
@@ -1,7 +1,7 @@
 <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Noto+Sans&family=Noto+Serif+JP&family=Noto+Serif+KR&family=Noto+Serif+SC&family=Noto+Serif+TC&display=swap">
 
 <div class="column center loading-background">
-	<mat-spinner/>
+	<mat-spinner class="grayscale"/>
 </div>
 <div class="wrapper" #wrapper [style.opacity]="loading ? 0 : 1">
 	<canvas #canvas></canvas>
