--- a/buildSrc/src/main/resources/website/src/app/component/side/side.component.html
+++ b/buildSrc/src/main/resources/website/src/app/component/side/side.component.html
@@ -2,7 +2,7 @@
 	<mat-sidenav position="end">
 		<div class="column-reverse wrapper">
 			<div class="spacing"></div>
-			<div class="content">
+			<div class="wrapper padded">
 				<ng-content select="[sidenav]"/>
 			</div>
 			<mat-toolbar>
