--- a/buildSrc/src/main/resources/website/src/app/component/station/station.component.css
+++ b/buildSrc/src/main/resources/website/src/app/component/station/station.component.css
@@ -1,12 +1,3 @@
-mat-chip-option {
-	border: 2px solid;
-	box-sizing: border-box;
-}
-
-mat-icon {
-	min-width: 1em;
-}
-
 .clickable {
 	cursor: pointer;
 	transition: background-color 0.2s;
@@ -14,10 +5,6 @@ mat-icon {
 
 .clickable:hover {
 	background-color: rgba(127, 127, 127, 10%);
-}
-
-.padding {
-	padding: 0.5em;
 }
 
 .station-name {
@@ -41,8 +28,8 @@ mat-icon {
 	height: 0.5em;
 }
 
-.chip-wrapper {
-	overflow: hidden;
+.chip {
+	--mdc-chip-outline-color: transparent;
 }
 
 .chip-text {
