--- a/buildSrc/src/main/resources/website/src/app/component/station/station.component.html
+++ b/buildSrc/src/main/resources/website/src/app/component/station/station.component.html
@@ -1,4 +1,4 @@
-<div class="column gap margin">
+<div class="column gap wrapper">
 	<div class="column">
 		@for (stationNamePart of getStation()?.name | splitName; track $index) {
 			<div class="station-name {{stationNamePart.isCjk ? 'cjk' : ''}}">{{ stationNamePart.text }}</div>
@@ -7,7 +7,7 @@
 	<div class="station-color-bar" [style.background-color]="'#' + getStation()?.color"></div>
 	<div class="row gap center">
 		<mat-icon>my_location</mat-icon>
-		<div class="row center">
+		<div class="row gap-small center">
 			<div>({{ getCoordinatesText() }})</div>
 			<button mat-icon-button (click)="copyLocation(copyIconButton)">
 				<mat-icon #copyIconButton>content_copy</mat-icon>
@@ -21,45 +21,43 @@
 	<mat-divider/>
 	<div class="row gap-small center">
 		<mat-icon>directions</mat-icon>
-		<div matRipple class="clickable padding" (click)="setDirectionsOrigin()">Set as Origin</div>
-		<div matRipple class="clickable padding" (click)="setDirectionsDestination()">Set as Destination</div>
+		<button mat-button class="grayscale" (click)="setDirectionsOrigin()">Set as Origin</button>
+		<button mat-button class="grayscale" (click)="setDirectionsDestination()">Set as Destination</button>
 	</div>
 	<mat-divider/>
 
 	@if (isLoading()) {
 		<div class="column center">
 			<br/>
-			<mat-spinner/>
+			<mat-spinner class="grayscale"/>
 		</div>
 	}
-	<div class="column gap-small">
-		<div class="chip-wrapper">
-			<mat-chip-listbox #chipList aria-label="Routes" multiple>
-				@for (route of getActiveRoutes(); track $index) {
-					<mat-chip-option #chip [style.border-color]="route.color | formatColor" [style.height]="(route.lineCount + 1) + 'em'" [id]="route.key">
-						<div class="row gap-small center">
-							<mat-icon>{{ route.typeIcon }}</mat-icon>
-							<div class="column chip-text">
-								@for (name of route.name | splitName; track $index) {
-									<div>{{ name.text }}</div>
-								}
-							</div>
-							@if (route.number !== '') {
-								<mat-divider vertical [style.height]="route.lineCount + 'em'"/>
-							}
-							@if (route.number !== '') {
-								<div class="column chip-text">
-									@for (number of route.number | splitName; track $index) {
-										<div>{{ number.text }}</div>
-									}
-								</div>
+	<div class="column gap-small content">
+		<mat-chip-listbox class="chip" #chipList aria-label="Routes" multiple>
+			@for (route of getActiveRoutes(); track $index) {
+				<mat-chip-option [style.box-shadow]="'0 0 0 2px ' + (route.color | formatColor) + ' inset'" [style.height]="(route.lineCount + 1) + 'em'" [id]="route.key">
+					<div class="row gap-small center">
+						<mat-icon>{{ route.typeIcon }}</mat-icon>
+						<div class="column chip-text">
+							@for (name of route.name | splitName; track $index) {
+								<div>{{ name.text }}</div>
 							}
 						</div>
-					</mat-chip-option>
-				}
-			</mat-chip-listbox>
-		</div>
-		<mat-checkbox #showTerminatingCheckbox [style.display]="getHasTerminating() ? '' : 'none'">Show Terminating</mat-checkbox>
+						@if (route.number !== '') {
+							<mat-divider vertical [style.height]="route.lineCount + 'em'"/>
+						}
+						@if (route.number !== '') {
+							<div class="column chip-text">
+								@for (number of route.number | splitName; track $index) {
+									<div>{{ number.text }}</div>
+								}
+							</div>
+						}
+					</div>
+				</mat-chip-option>
+			}
+		</mat-chip-listbox>
+		<mat-checkbox class="grayscale" #showTerminatingCheckbox [style.display]="getHasTerminating() ? '' : 'none'">Show Terminating</mat-checkbox>
 
 		<div class="column arrivals">
 			@for (arrival of getArrivals(chipList, showTerminatingCheckbox); track $index) {
