--- a/buildSrc/src/main/resources/website/src/styles.css
+++ b/buildSrc/src/main/resources/website/src/styles.css
@@ -15,7 +15,7 @@ html, body {
 	height: 100%;
 }
 
-mat-spinner, mat-checkbox {
+.grayscale {
 	filter: grayscale(1);
 }
 
@@ -47,14 +47,27 @@ mat-spinner, mat-checkbox {
 	gap: 0.5em;
 }
 
-.margin {
-	margin: 1em;
-}
-
 .center {
 	align-items: center;
 }
 
 .spacing {
 	flex-grow: 1;
+}
+
+.wrapper {
+	overflow: hidden;
+	width: 100%;
+	height: 100%;
+}
+
+.content {
+	overflow-x: hidden;
+	overflow-y: auto;
+	width: 100%;
+	height: 100%;
+}
+
+mat-icon {
+	min-width: 1em;
 }
