--- a/buildSrc/src/main/resources/website/src/app/component/search/search.component.html
+++ b/buildSrc/src/main/resources/website/src/app/component/search/search.component.html
@@ -1,4 +1,4 @@
-<mat-form-field>
+<mat-form-field class="padding-sides" subscriptSizing="dynamic">
 	<mat-label>{{ label }}</mat-label>
 	<input matInput type="search" aria-label="Search" [formControl]="searchBox" [matAutocomplete]="auto"/>
 </mat-form-field>
