--- a/buildSrc/src/main/resources/website/src/app/app.component.html
+++ b/buildSrc/src/main/resources/website/src/app/app.component.html
@@ -2,10 +2,10 @@
 	<app-side #sideStation (closed)="onCloseStation()">
 		<app-side #sideMain>
 			<app-map (stationClicked)="onClickStation($event, sideStation, sideDirections, false)"/>
-			<button mat-fab class="button-corner" color="" aria-label="Menu" (click)="sideMain.open()">
+			<button mat-fab class="button-corner" aria-label="Menu" (click)="sideMain.open()" matTooltip="Menu">
 				<mat-icon>menu</mat-icon>
 			</button>
-			<div sidenav class="column wrapper">
+			<div sidenav class="column gap wrapper">
 				<app-search label="Search for anything..." [includeRoutes]="true" (stationClicked)="onClickStation($event, sideStation, sideDirections, true)"/>
 				<app-panel class="wrapper"/>
 			</div>
