--- a/buildSrc/src/main/resources/website/src/app/component/sidenav/sidenav.component.html
+++ b/buildSrc/src/main/resources/website/src/app/component/sidenav/sidenav.component.html
@@ -2,7 +2,7 @@
 	<mat-sidenav position="end">
 		<div class="column-reverse wrapper">
 			<div class="spacing"></div>
-			<div class="wrapper padding-top-bottom">
+			<div class="wrapper">
 				<ng-content select="[sidenav]"/>
 			</div>
 			<mat-toolbar>
