--- a/buildSrc/src/main/resources/website/src/app/component/station-panel/station-panel.component.html
+++ b/buildSrc/src/main/resources/website/src/app/component/station-panel/station-panel.component.html
@@ -41,7 +41,7 @@
 					<div class="column gap-small padding-top-bottom padding-sides content">
 						<mat-chip-listbox class="chip" #chipList aria-label="Routes" multiple>
 							@for (route of getActiveRoutes(); track $index) {
-								<mat-chip-option [style.box-shadow]="'0 0 0 2px ' + (route.colorInt | formatColor) + ' inset'" [style.height]="(route.lineCount + 1) + 'em'" [id]="route.key" (selectionChange)="updateArrivalFilter(chipList,showTerminatingCheckbox.checked)">
+								<mat-chip-option [style.box-shadow]="'0 0 0 2px ' + (route.colorInt | formatColor) + ' inset'" [style.height]="(route.textLineCount + 1) + 'em'" [id]="route.key" (selectionChange)="updateArrivalFilter(chipList,showTerminatingCheckbox.checked)">
 									<div class="row gap-small center">
 										<mat-icon>{{ route.typeIcon }}</mat-icon>
 										<div class="column chip-text">
@@ -50,7 +50,7 @@
 											}
 										</div>
 										@if (route.number !== '') {
-											<mat-divider vertical [style.height]="route.lineCount + 'em'"/>
+											<mat-divider vertical [style.height]="route.textLineCount + 'em'"/>
 										}
 										@if (route.number !== '') {
 											<div class="column chip-text">
@@ -70,9 +70,9 @@
 								<div class="column">
 									<mat-divider/>
 									<app-data-list-entry [icons]="[arrival.routeTypeIcon, getCircularStateIcon(arrival.circularState)]" [title]="[arrival.destination | formatName, arrival.getArrivalTime() | formatTime : 'Arrived']" [subtitles]="[
-											[(arrival.routeName | formatName) + ' ' + (arrival.routeNumber | formatName), arrival.isContinuous ? 'Every 8 Seconds' : arrival.arrival | formatDate],
-											['Platform ' + arrival.platformName, arrival.isContinuous ? '' : (arrival.getDeviation() | formatTime :'') + ' ' + arrival.getDeviationString()]
-										]" [color]="arrival.routeColor | formatColor" [useLightColor]="!arrival.realtime" (entryClicked)="showDetails(arrival)"/>
+										[(arrival.routeName | formatName) + ' ' + (arrival.routeNumber | formatName), arrival.isContinuous ? 'Every 8 Seconds' : arrival.arrival | formatDate],
+										['Platform ' + arrival.platformName, arrival.isContinuous ? '' : (arrival.getDeviation() | formatTime :'') + ' ' + arrival.getDeviationString()]
+									]" [color]="arrival.routeColorInt | formatColor" [useLightColor]="!arrival.realtime" [clickable]="true" (entryClicked)="showDetails(arrival)"/>
 								</div>
 							}
 						</div>
@@ -89,7 +89,7 @@
 						@for (route of getRoutes(); track $index) {
 							<div class="column">
 								<mat-divider/>
-								<app-data-list-entry [icons]="[route.typeIcon, getCircularStateIcon(route.circularState)]" [title]="[route.name | formatName, route.number | formatName]" [subtitles]="showDetailsCheckbox.checked ? mapRouteVariations(route.variations) : []" [color]="route.colorInt | formatColor" [useLightColor]="false" (entryClicked)="routeClicked.emit(route.color)"/>
+								<app-data-list-entry [icons]="[route.typeIcon, '']" [title]="[route.name | formatName, route.number | formatName]" [subtitles]="showDetailsCheckbox.checked ? mapRouteVariations(route.variations) : []" [color]="route.colorInt | formatColor" [useLightColor]="false" [clickable]="true" (entryClicked)="routeClicked.emit(getRouteId(route))"/>
 							</div>
 						}
 					</div>
@@ -106,7 +106,7 @@
 								@if ($index > 0) {
 									<mat-divider/>
 								}
-								<app-data-list-entry [icons]="mapConnectionTypes(connection.types)" [title]="[connection.name | formatName, '']" [subtitles]="[]" [color]="'#' + connection.color" [useLightColor]="false" (entryClicked)="stationClicked.emit(connection.id)"/>
+								<app-data-list-entry [icons]="mapConnectionTypes(connection.types)" [title]="[connection.name | formatName, '']" [subtitles]="[]" [color]="'#' + connection.color" [useLightColor]="false" [clickable]="true" (entryClicked)="stationClicked.emit(connection.id)"/>
 							</div>
 						}
 					</div>
